# AICustomerService

./: .gitignore  DOCKER_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  app.py  deploy.bat  deploy.sh  docker-compose.yml  make_video.sh  musk_concat.txt  musk_script.txt  musk_subtitles.srt  requirements.txt  start.bat  test-deployment.bat  test-deployment.sh
.cursor/rules/: my-rule.mdc
backend/: .env.example  WINDOWS_SETUP.md  __init__.py  auth.py  config.py  dev.bat  fix-chromadb.bat  main.py  pyproject.toml  requirements.txt  routes.py
backend/api/: model_api.py
backend/app/agents/: tool_manager.py
backend/data/knowledge/: knowledge_base.json
backend/models/: __init__.py  chat_models.py  model_adapter.py
backend/services/: __init__.py  chat_service.py  knowledge_service.py  memory_service.py  policy_service.py  tenant_service.py  xianyu_service.py
backend/static/: widget.js
backend/tests/: test_api_endpoints.py  test_tool_manager.py
docker/: nginx.conf
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/components/: ChatHistory.css  ChatHistory.tsx  ChatMessage.css  ChatMessage.tsx  Footer.css  Footer.tsx  Header.css  Header.tsx  ModelSelector.tsx  SideNav.css  SideNav.tsx
frontend/src/pages/: ChatPage.css  ChatPage.tsx  ChatSettingsPage.tsx  KnowledgeBasePage.tsx  ModelsPage.tsx  OpsPage.tsx  OverviewPage.tsx  PoliciesPage.tsx  PublicChatPage.css  PublicChatPage.tsx  RobotsPage.tsx  SettingsPage.css  SettingsPage.tsx  WidgetPage.css  WidgetPage.tsx
frontend/src/services/: api.js  chatService.ts
frontend/src/types/: chat.ts
